hphp/hack/test/typecheck/akshape/nested_dynamic_index_non_lvalue_error.php.exp
File "nested_dynamic_index_non_lvalue_error.php", line 13, characters 15-25:
Invalid argument (Typing[4110])
File "nested_dynamic_index_non_lvalue_error.php", line 16, characters 22-27:
This is a string
File "nested_dynamic_index_non_lvalue_error.php", line 10, characters 17-17:
It is incompatible with an int
